Implementacion de Login

--- a/src/app/Auth/inicio/inicio.component.html
+++ b/src/app/Auth/inicio/inicio.component.html
@@ -20,9 +20,9 @@
     </nav>
 
     <!-- Botón -->
-    <a routerLink="/login" class="bg-orange-600 hover:bg-orange-700 text-white px-5 py-2 rounded-lg text-lg font-semibold">
+    <button button (click)="goToLogin()" class="bg-orange-600 hover:bg-orange-700 text-white px-5 py-2 rounded-lg text-lg font-semibold">
       Iniciar sesión
-    </a>
+    </button>
   </header>
 
   <!-- Hero -->
