--- a/src/app/Auth/inicio/inicio.component.html
+++ b/src/app/Auth/inicio/inicio.component.html
@@ -20,7 +20,7 @@
     </nav>
 
     <!-- Botón -->
-    <button class="bg-orange-600 hover:bg-orange-700 text-white px-5 py-2 rounded-lg text-lg font-semibold">
+    <button button (click)="goToLogin()" class="bg-orange-600 hover:bg-orange-700 text-white px-5 py-2 rounded-lg text-lg font-semibold">
       Iniciar sesión
     </button>
   </header>
@@ -62,7 +62,7 @@
       <p class="mt-6 text-lg md:text-xl text-gray-300">
         El gimnasio donde los límites no existen 💪
       </p>
-      <a href="#" class="mt-8 inline-block bg-orange-600 hover:bg-orange-700 px-8 py-4 rounded-xl text-lg font-semibold transition">
+      <a routerLink="/login" class="mt-8 inline-block bg-orange-600 hover:bg-orange-700 px-8 py-4 rounded-xl text-lg font-semibold transition">
         Comienza ahora
       </a>
     </div>
