falta corregir imagen de carrusel

--- a/src/app/Auth/inicio/inicio.component.html
+++ b/src/app/Auth/inicio/inicio.component.html
@@ -32,22 +32,19 @@
       <div id="carousel" class="relative w-full h-full">
         <!-- Slide 1 -->
         <div class="carousel-slide absolute inset-0 transition-opacity duration-1000 opacity-100">
-          <img src="/src/assets/img/carrusel1.webp" 
-               alt="Gimnasio moderno" class="w-full h-full object-cover">
+          <img src="assets/img/carrusel1.webp" alt="Gimnasio moderno" class="w-full h-full object-cover">
           <div class="absolute inset-0 bg-black bg-opacity-60"></div>
         </div>
         
         <!-- Slide 2 -->
         <div class="carousel-slide absolute inset-0 transition-opacity duration-1000 opacity-0">
-          <img src="/src/assets/img/carrusel2.jpg" 
-               alt="Persona entrenando" class="w-full h-full object-cover">
+          <img src="assets/img/carrusel2.jpg" alt="Persona entrenando" class="w-full h-full object-cover">
           <div class="absolute inset-0 bg-black bg-opacity-60"></div>
         </div>
         
         <!-- Slide 3 -->
         <div class="carousel-slide absolute inset-0 transition-opacity duration-1000 opacity-0">
-          <img src="/src/assets/img/carrusel3.jpg" 
-               alt="Clase grupal" class="w-full h-full object-cover">
+          <img src="assets/img/carrusel3.jpg" alt="Clase grupal" class="w-full h-full object-cover">
           <div class="absolute inset-0 bg-black bg-opacity-60"></div>
         </div>
       </div>
