cambio de nombre

--- a/src/app/Auth/inicio/inicio.component.html
+++ b/src/app/Auth/inicio/inicio.component.html
@@ -21,7 +21,7 @@
 
     <!-- Botón -->
     <button button (click)="goToLogin()" class="bg-orange-600 hover:bg-orange-700 text-white px-5 py-2 rounded-lg text-lg font-semibold">
-      Iniciar sesión
+      Iniciar
     </button>
   </header>
 
