--- a/src/app/Auth/login/login.component.html
+++ b/src/app/Auth/login/login.component.html
@@ -7,7 +7,7 @@
     
     <form (ngSubmit)="onSubmit()" #loginForm="ngForm" class="login-form">
       <div class="form-group">
-        <label for="email">Correo Electrónico</label>
+        <label for="email">Correo</label>
         <div class="input-wrapper">
           <input 
             type="email" 
