--- a/src/app/Auth/inicio/inicio.component.html
+++ b/src/app/Auth/inicio/inicio.component.html
@@ -15,7 +15,7 @@
     <nav class="hidden md:flex space-x-8 text-white text-lg font-bold">
       <a href="#" class="hover:text-white">Inicio</a>
       <a href="#" class="hover:text-white">Servicios</a>
-      <a href="#" class="hover:text-white">Planes</a>
+      <a routerLink="/membresia" class="hover:text-white">Planes</a>
       <a href="#" class="hover:text-white">Contacto</a>
     </nav>
 
