--- a/src/app/Auth/membresia/membresia.component.html
+++ b/src/app/Auth/membresia/membresia.component.html
@@ -15,9 +15,7 @@
     <nav class="hidden md:flex space-x-8 text-white text-lg font-bold">
       <a href="#" class="hover:text-white">Inicio</a>
       <a href="#" class="hover:text-white">Servicios</a>
-      <button button (click)="goToPlanes()" class="bg-orange-600 hover:bg-orange-700 text-white px-5 py-2 rounded-lg text-lg font-semibold">
-      Planes
-    </button>
+      <a routerLink="/membresia" class="hover:text-white">Planes</a>
       <a href="#" class="hover:text-white">Contacto</a>
     </nav>
 
