--- a/src/app/Auth/inicio/inicio.component.html
+++ b/src/app/Auth/inicio/inicio.component.html
@@ -16,7 +16,7 @@
       <a href="#" class="hover:text-white">Inicio</a>
       <a href="#" class="hover:text-white">Servicios</a>
       <a routerLink="/membresia" class="hover:text-white">Planes</a>
-      <a href="#" class="hover:text-white">Contacto</a>
+      <a routerLink="/contacto">📞 Ir a Contacto</a>
     </nav>
 
     <!-- Botón -->
