--- a/src/app/Auth/inicio/inicio.component.html
+++ b/src/app/Auth/inicio/inicio.component.html
@@ -13,10 +13,10 @@
 
     <!-- Links -->
     <nav class="hidden md:flex space-x-8 text-white text-lg font-bold">
-      <a href="#" class="hover:text-white">Inicio</a>
-      <a href="#" class="hover:text-white">Servicios</a>
-      <a routerLink="/membresia" class="hover:text-white">Planes</a>
-      <a routerLink="/contacto">📞 Ir a Contacto</a>
+      <a href="#" class="hover:text-white">🏡 Inicio</a>
+      <a href="#" class="hover:text-white">​💪​ Servicios</a>
+      <a routerLink="/membresia" class="hover:text-white">​💳​ Planes</a>
+      <a routerLink="/contacto">📞 Contacto</a>
     </nav>
 
     <!-- Botón -->
