--- a/src/app/Auth/inicio/inicio.component.html
+++ b/src/app/Auth/inicio/inicio.component.html
@@ -22,7 +22,7 @@
     <!-- Botón -->
     <div *ngIf="!user; else loggedInTemplate">
       <button (click)="goToLogin()" 
-        class="bg-orange-600 hover:bg-orange-700 text-white px-5 py-2 rounded-lg text-lg font-semibold">
+        class="bg-orange-600 hover:bg-orange-70cd0 text-white px-5 py-2 rounded-lg text-lg font-semibold">
         Iniciar sesión
       </button>
     </div>
